fix btn menu on mobile
fix btn menu on mobile

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1136,7 +1136,7 @@ padding-bottom: 120px;
   height: 26px;
 
   cursor: pointer;
-  z-index: 1;
+  z-index: 5555;
 }
 
 .menu__btn > span,
@@ -1180,6 +1180,7 @@ padding-bottom: 120px;
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
 
   transition-duration: .25s;
+  z-index: 2222;
 }
 
 .menu__item {
